--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ server.port=2102
 
 eureka.client.serviceUrl.defaultZone=http://localhost:1001/eureka/
 
+swagger.base-package=com.ivy.eurekaconsumerribbon
